Fix album image size on mobile

--- a/src/app/components/album-card/album-card.component.scss
+++ b/src/app/components/album-card/album-card.component.scss
@@ -12,7 +12,7 @@
     width: 100%;
     @media only screen and (max-width: 700px) {
       margin: 0 0.8rem 0 0;
-      width: unset !important;
+      width: 6.2rem !important;
     }
   }
 
